<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Software_Development_Project</string>
    <string name="opening_tag">Available For All Your Shopping Needs!</string>
    <string name="brand_name">My Project.</string>
    <string name="already_a_member">Already a Member? Login Here.</string>
    <string name="new_user">New User? Register Here.</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="i_am_an_admin">I am an Admin</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="remember_me">Remember Me</string>
    <string name="i_am_not_an_admin">I am not an Admin..</string>
    <string name="add_new_product">Add New Product</string>
    <string name="product_name">Product Name…</string>
    <string name="product_description">Product Description....</string>
    <string name="add_product">Add Product</string>
    <string name="product_price">Product Price…</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="user_name">User Name</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="categories">Categories</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="main_drawer_close">Close navigation drawer</string>
    <string name="main_drawer_open">Open navigation drawer</string>
    <string name="product__name">Product Name</string>
    <string name="product__description">Product Description</string>
    <string name="product__price">Product Price</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="change_profile">Change Profile </string>
    <string name="address">Address...</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_price">Total Price =</string>
    <string name="next">Next</string>
    <string name="product_quantity" tools:keep="@string/product_quantity">Product Quantity</string>
    <string name="please_confirm_your_shipment_details">Please Confirm your Shipment Details</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_home_address">Your Home Address</string>
    <string name="confirm">Confirm</string>
    <string name="congratulations_your_order_has_been_placed">Congratulations, Your Order has been Placed.</string>
    <string name="check_new_orders">Check New Orders</string>
    <string name="new_orders">New Orders</string>
    <string name="address_">Address =</string>
    <string name="date_time">Date , Time =</string>
    <string name="show_this_order_products">Show This Order Products</string>
    <string name="products">Products</string>
    <string name="search">Search</string>
    <string name="maintain_products">Maintain Products</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="delete_this_product">Delete This Product</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="set_security_questions">Set Security Questions</string>
    <string name="answer_the_following_questions">Answer the Following Questions</string>
    <string name="please_write_your_phone_number">Please write your phone number.</string>
    <string name="reset_password">Reset Password</string>
    <string name="where_your_parents_first_met">Where your parents first met?</string>
    <string name="who_is_your_favourite_super_hero">Who is your favourite super hero?</string>
    <string name="verify">Verify</string>
    <string name="straight_to_homepage">Straight To HomePage.</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="reserve_product">Reserve Product</string>
    <string name="please_confirm_your_reservation_details">Please Confirm Your Reservation Details</string>
</resources>