<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:iconTint="@android:color/darker_gray"
            android:title="@string/cart"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/category"
            android:iconTint="@android:color/darker_gray"
            android:title="@string/orders"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/categories"
            android:iconTint="@android:color/darker_gray"
            android:title="@string/categories"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:iconTint="@android:color/darker_gray"
            android:title="@string/settings"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:iconTint="@android:color/darker_gray"
            android:title="@string/logout"
            tools:targetApi="o" />
    </group>
</menu>