<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <RelativeLayout
        android:id="@+id/relative_layout123"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/reset_password"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/find_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout123"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:hint="@string/please_write_your_phone_number"
        android:inputType="phone"
        android:padding="14dp"
        />

    <TextView
        android:id = "@+id/title_questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/find_phone_number"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/answer_the_following_questions"
        android:textSize="26sp"
        />

    <EditText
        android:id="@+id/questions_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_questions"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:hint="@string/where_your_parents_first_met"
        android:inputType="text"
        android:padding="14dp"
        />

    <EditText
        android:id="@+id/questions_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questions_1"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:hint="@string/who_is_your_favourite_super_hero"
        android:inputType="text"
        android:padding="14dp"
        />

    <Button
        android:id="@+id/verify_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/questions_2"
        android:layout_margin="15dp"
        android:padding="14dp"
        android:text="@string/verify"
        android:textSize="20sp"
        android:textStyle="bold"
        />

</RelativeLayout>