<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfirmOrderActivity">

    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:text="@string/please_confirm_your_shipment_details"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/shipment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="60dp"
        android:layout_marginRight="45dp"
        android:autofillHints=""
        android:hint="@string/your_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/shipment_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shipment_name"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="45dp"
        android:autofillHints=""
        android:hint="@string/your_phone_number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/shipment_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/shipment_phone_number"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="45dp"
        android:autofillHints=""
        android:hint="@string/your_home_address"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/confirm_final_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>