<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="88dp"
        android:layout_marginTop="190dp"
        android:text="@string/brand_name"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold|italic"/>

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/name"
        android:hint="@string/phone_number"
        android:inputType="number"
        android:textSize="17sp"
        android:textStyle="bold"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@+id/phone_number"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="6dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="17sp"
        android:textStyle="bold"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/password"
        android:layout_marginTop="5dp"/>

    <com.rey.material.widget.CheckBox
        android:id="@+id/remember_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Material.Drawable.CheckBox"
        android:text="@string/remember_me"
        android:gravity="center_vertical"
        android:layout_below="@+id/password"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="17dp"
        tools:ignore="RelativeOverlap" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/remember_me"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_an_admin"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/login_btn"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="23dp"
        />

    <TextView
        android:id="@+id/not_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_not_an_admin"
        android:layout_alignParentStart="true"
        android:layout_below="@id/login_btn"
        android:textSize="20sp"
        android:layout_marginLeft="80dp"
        android:layout_marginStart="25dp"
        android:visibility="invisible"/>

</RelativeLayout>