<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/close_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/close"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/update_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:text="@string/update"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />

            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_profile_picture"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@+id/app_bar_settings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/profile_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_profile_picture"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="142dp"
        android:gravity="center"
        android:text="@string/change_profile"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/settings_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_change"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="10dp" />

    <EditText
        android:id="@+id/settings_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_phone_number"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:hint="@string/full_name"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/settings_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_full_name"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/settings_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_address"
        android:layout_margin="15dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

</RelativeLayout>